#
# Copyright (C) 2016 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

project(TENSORFLOW_DEMO)
cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_VERBOSE_MAKEFILE on)


if (ANDROID_ABI MATCHES "^armeabi-v7a$")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfloat-abi=softfp -mfpu=neon")
elseif(ANDROID_ABI MATCHES "^arm64-v8a")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -ftree-vectorize")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTANDALONE_DEMO_LIB \
                    -std=c++11 -fno-exceptions -frtti -O2 -Wno-narrowing \
                    -fPIE \
                    -DHAVE_PTHREAD \
                     ")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} \
                              -Wl,--allow-multiple-definition \
                              -Wl,--whole-archive -fPIE -v")
###########################################
MESSAGE(STATUS "Project: tensorflow_inference")

add_library(tensorflow_inference SHARED
            tensorflow/tools/ci_build/builds/user_ops/zero_out_op_kernel_1.cc
            tensorflow/contrib/boosted_trees/kernels/stats_accumulator_ops.cc
            tensorflow/contrib/input_pipeline/kernels/input_pipeline_kernels.cc
            tensorflow/contrib/factorization/kernels/clustering_ops.cc
            tensorflow/contrib/factorization/kernels/masked_matmul_ops.cc
            tensorflow/contrib/factorization/kernels/wals_solver_ops.cc
            tensorflow/contrib/memory_stats/kernels/memory_stats_ops.cc
            tensorflow/contrib/batching/kernels/batch_kernels.cc
            tensorflow/contrib/image/kernels/bipartite_match_op.cc
            tensorflow/contrib/framework/kernels/load_and_remap_matrix_op.cc
            tensorflow/contrib/framework/kernels/generate_vocab_remapping_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/unpack_path_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/k_feature_routing_function_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/routing_gradient_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/routing_function_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/hard_routing_function_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/k_feature_gradient_op.cc
            tensorflow/contrib/tensor_forest/kernels/reinterpret_string_to_float_op.cc
            tensorflow/contrib/tensor_forest/kernels/scatter_add_ndim_op.cc
            tensorflow/contrib/ffmpeg/encode_audio_op.cc
            tensorflow/contrib/ffmpeg/decode_audio_op.cc
            tensorflow/user_ops/ackermann_op.cc
            tensorflow/compiler/jit/kernels/parallel_check_op.cc
            tensorflow/core/user_ops/fact.cc
            tensorflow/core/graph/testlib.cc
            tensorflow/core/kernels/barrier_ops.cc
            tensorflow/core/kernels/fixed_length_record_reader_op.cc
            tensorflow/core/kernels/cache_dataset_ops.cc
            tensorflow/core/kernels/sendrecv_ops.cc
            tensorflow/core/kernels/candidate_sampler_ops.cc
            tensorflow/core/kernels/logging_ops.cc
            tensorflow/core/kernels/whole_file_read_ops.cc
            tensorflow/core/kernels/decode_csv_op.cc
            tensorflow/core/kernels/skip_dataset_op.cc
            tensorflow/core/kernels/concatenate_dataset_op.cc
            tensorflow/core/kernels/no_op.cc
            tensorflow/core/kernels/fused_batch_norm_op.cc
            tensorflow/core/kernels/encode_wav_op.cc
            tensorflow/core/kernels/mfcc_op.cc
            tensorflow/core/kernels/adjust_saturation_op.cc
            tensorflow/core/kernels/cast_op.cc
            tensorflow/core/kernels/conditional_accumulator_base_op.cc
            tensorflow/core/kernels/filter_dataset_op.cc
            tensorflow/core/kernels/restore_op.cc
            tensorflow/core/kernels/identity_reader_op.cc
            tensorflow/core/kernels/ctc_loss_op.cc
            tensorflow/core/kernels/function_ops.cc
            tensorflow/core/kernels/string_split_op.cc
            tensorflow/core/kernels/cwise_op_logical_or.cc
            tensorflow/core/kernels/concat_op.cc
            tensorflow/core/kernels/control_flow_ops.cc
            tensorflow/core/kernels/attention_ops.cc
            tensorflow/core/kernels/interleave_dataset_op.cc
            tensorflow/core/kernels/variable_ops.cc
            tensorflow/core/kernels/reader_dataset_ops.cc
            tensorflow/core/kernels/parse_tensor_op.cc
            tensorflow/core/kernels/save_op.cc
            tensorflow/core/kernels/fake_quant_ops.cc
            tensorflow/core/kernels/cwise_op_logical_not.cc
            tensorflow/core/kernels/decode_wav_op.cc
            tensorflow/core/kernels/tensor_array_ops.cc
            tensorflow/core/kernels/save_restore_v2_ops.cc
            tensorflow/core/kernels/iterator_ops.cc
            tensorflow/core/kernels/range_dataset_op.cc
            tensorflow/core/kernels/word2vec_kernels.cc
            tensorflow/core/kernels/string_join_op.cc
            tensorflow/core/kernels/fifo_queue_op.cc
            tensorflow/core/kernels/shape_ops.cc
            tensorflow/core/kernels/ignore_errors_dataset_op.cc
            tensorflow/core/kernels/serialize_sparse_op.cc
            tensorflow/core/kernels/matching_files_op.cc
            tensorflow/core/kernels/decode_bmp_op.cc
            tensorflow/core/kernels/shuffle_dataset_op.cc
            tensorflow/core/kernels/batch_dataset_op.cc
            tensorflow/core/kernels/text_line_reader_op.cc
            tensorflow/core/kernels/constant_op.cc
            tensorflow/core/kernels/summary_audio_op.cc
            tensorflow/core/kernels/zip_dataset_op.cc
            tensorflow/core/kernels/spectrogram_op.cc
            tensorflow/core/kernels/record_input_op.cc
            tensorflow/core/kernels/sparse_tensors_map_ops.cc
            tensorflow/core/kernels/stack_ops.cc
            tensorflow/core/kernels/priority_queue_op.cc
            tensorflow/core/kernels/colorspace_op.cc
            tensorflow/core/kernels/flat_map_dataset_op.cc
            tensorflow/core/kernels/tensor_slice_dataset_op.cc
            tensorflow/core/kernels/stage_op.cc
            tensorflow/core/kernels/as_string_op.cc
            tensorflow/core/kernels/where_op.cc
            tensorflow/core/kernels/lookup_table_init_op.cc
            tensorflow/core/kernels/tf_record_reader_op.cc
            tensorflow/core/kernels/sparse_reshape_op.cc
            tensorflow/core/kernels/cwise_op_logical_and.cc
            tensorflow/core/kernels/base64_ops.cc
            tensorflow/core/kernels/tensor_dataset_op.cc
            tensorflow/core/kernels/parallel_map_dataset_op.cc
            tensorflow/core/kernels/resource_variable_ops.cc
            tensorflow/core/kernels/identity_op.cc
            tensorflow/core/kernels/immutable_constant_op.cc
            tensorflow/core/kernels/group_by_window_dataset_op.cc
            tensorflow/core/kernels/padded_batch_dataset_op.cc
            tensorflow/core/kernels/session_ops.cc
            tensorflow/core/kernels/reader_ops.cc
            tensorflow/core/kernels/remote_fused_graph_execute_op.cc
            tensorflow/core/kernels/lookup_table_op.cc
            tensorflow/core/kernels/fft_ops.cc
            tensorflow/core/kernels/random_shuffle_queue_op.cc
            tensorflow/core/kernels/map_stage_op.cc
            tensorflow/core/kernels/take_dataset_op.cc
            tensorflow/core/kernels/queue_ops.cc
            tensorflow/core/kernels/padding_fifo_queue_op.cc
            tensorflow/core/kernels/map_dataset_op.cc
            tensorflow/core/kernels/repeat_dataset_op.cc
            tensorflow/core/kernels/summary_op.cc
            tensorflow/core/kernels/adjust_hue_op.cc
            tensorflow/core/kernels/bitcast_op.cc
            tensorflow/core/kernels/ctc_decoder_ops.cc
            tensorflow/core/kernels/reduce_join_op.cc
            tensorflow/core/kernels/conditional_accumulator_op.cc
            tensorflow/core/kernels/non_max_suppression_op.cc
            tensorflow/core/kernels/dense_to_sparse_batch_dataset_op.cc
            tensorflow/core/distributed_runtime/rpc/grpc_testlib_ops.cc
            tensorflow/core/framework/resource_mgr.cc
            tensorflow/core/framework/op_kernel.cc
            tensorflow/contrib/boosted_trees/lib/utils/parallel_for.cc
            tensorflow/contrib/batching/util/periodic_function.cc
            tensorflow/core/kernels/concat_lib_cpu.cc
            tensorflow/core/kernels/split_lib_cpu.cc
            tensorflow/core/util/tensor_bundle/tensor_bundle.cc
            tensorflow/core/lib/random/simple_philox.cc
            tensorflow/core/kernels/initializable_lookup_table.cc
            tensorflow/core/framework/lookup_interface.cc
            tensorflow/core/util/work_sharder.cc
            tensorflow/core/kernels/queue_base.cc
            tensorflow/compiler/jit/legacy_flags/parallel_check_op_flags.cc
            tensorflow/core/kernels/priority_queue.cc
            tensorflow/core/lib/io/buffered_inputstream.cc
            tensorflow/core/framework/reader_base.cc
            tensorflow/core/lib/io/random_inputstream.cc
            tensorflow/core/lib/io/zlib_inputstream.cc
            tensorflow/core/util/guarded_philox_random.cc
            tensorflow/core/util/guarded_philox_random.cc
            tensorflow/core/kernels/range_sampler.cc
            tensorflow/core/kernels/captured_function.cc
            tensorflow/core/kernels/dataset.cc
            tensorflow/core/kernels/mfcc.cc
            tensorflow/core/kernels/cast_op_impl_uint8.cc
            tensorflow/core/kernels/cast_op_impl_int8.cc
            tensorflow/core/kernels/cast_op_impl_uint16.cc
            tensorflow/core/kernels/cast_op_impl_int32.cc
            tensorflow/core/kernels/cast_op_impl_int64.cc
            tensorflow/core/kernels/cast_op_impl_half.cc
            tensorflow/core/kernels/cast_op_impl_float.cc
            tensorflow/core/kernels/cast_op_impl_double.cc
            tensorflow/core/kernels/cast_op_impl_complex64.cc
            tensorflow/core/kernels/cast_op_impl_complex128.cc
            tensorflow/core/kernels/conditional_accumulator_base.cc
            tensorflow/core/kernels/save_restore_tensor.cc
            tensorflow/core/util/sparse/group_iterator.cc
            tensorflow/core/kernels/encode_wav_op.cc
            tensorflow/core/lib/wav/wav_io.cc
            tensorflow/core/kernels/cast_op_impl_bool.cc
            tensorflow/core/kernels/cast_op_impl_int16.cc
            tensorflow/core/kernels/cast_op_impl_bfloat.cc
            tensorflow/core/util/ctc/ctc_loss_calculator.cc
            tensorflow/core/lib/io/inputbuffer.cc
            tensorflow/core/lib/io/record_reader.cc
            tensorflow/core/util/tensor_slice_writer.cc
            tensorflow/core/kernels/tensor_array.cc
            tensorflow/core/kernels/spectrogram.cc
            tensorflow/core/kernels/fill_functor.cc
            tensorflow/core/util/tensor_bundle/naming.cc
            tensorflow/core/kernels/ops_util.cc
            tensorflow/core/lib/random/distribution_sampler.cc
            tensorflow/core/kernels/fifo_queue.cc
            tensorflow/core/kernels/record_yielder.cc
            tensorflow/core/kernels/lookup_util.cc
            tensorflow/core/kernels/cwise_ops_common.cc
            tensorflow/core/util/util.cc
            tensorflow/core/kernels/window_dataset.cc
            tensorflow/core/kernels/mfcc_dct.cc
            tensorflow/core/kernels/mfcc_mel_filterbank.cc
            tensorflow/core/lib/random/weighted_picker.cc
            tensorflow/core/util/command_line_flags.cc
            tensorflow/core/lib/io/table_builder.cc
            tensorflow/core/lib/strings/base64.cc
            tensorflow/core/kernels/padding_fifo_queue.cc
            tensorflow/core/framework/bfloat16.cc
            tensorflow/core/util/bcast.cc
            tensorflow/core/lib/histogram/histogram.cc
            tensorflow/compiler/xla/legacy_flags/parse_flags_from_env.cc
            tensorflow/core/lib/io/inputstream_interface.cc
            tensorflow/core/lib/io/block_builder.cc
            tensorflow/core/lib/io/compression.cc
            tensorflow/java/src/main/native/exception_jni.cc
            tensorflow/java/src/main/native/graph_jni.cc
            tensorflow/java/src/main/native/operation_builder_jni.cc
            tensorflow/java/src/main/native/operation_jni.cc
            tensorflow/java/src/main/native/saved_model_bundle_jni.cc
            tensorflow/java/src/main/native/session_jni.cc
            tensorflow/java/src/main/native/tensor_jni.cc
            tensorflow/java/src/main/native/tensorflow_jni.cc
            tensorflow/contrib/android/jni/run_stats_jni.cc
            tensorflow/core/platform/default/logging.cc
            tensorflow/core/framework/tensor_shape.cc
            tensorflow/core/framework/tensor.cc
            tensorflow/core/framework/resource_handle.cc
            tensorflow/core/framework/types.cc
            tensorflow/core/framework/log_memory.cc
            tensorflow/core/framework/allocator.cc
            tensorflow/core/platform/tensor_coding.cc
            tensorflow/core/platform/variant_coding.cc
            tensorflow/core/lib/strings/str_util.cc
            tensorflow/core/lib/core/coding.cc
            tensorflow/core/lib/core/stringpiece.cc
            tensorflow/core/graph/node_builder.cc
            tensorflow/core/framework/allocator_registry.cc
            tensorflow/core/framework/tracking_allocator.cc
            tensorflow/core/graph/graph.cc
            tensorflow/core/kernels/hexagon/graph_transferer.cc
            tensorflow/core/common_runtime/session.cc
            tensorflow/core/graph/subgraph.cc
            tensorflow/core/common_runtime/session_factory.cc
            tensorflow/core/common_runtime/session_options.cc
            tensorflow/core/common_runtime/shape_refiner.cc
            tensorflow/core/common_runtime/threadpool_device_factory.cc
            tensorflow/core/common_runtime/threadpool_device.cc
            tensorflow/core/common_runtime/device.cc
            tensorflow/core/common_runtime/local_device.cc
            tensorflow/core/platform/tracing.cc
            tensorflow/core/framework/device_base.cc
            tensorflow/core/framework/op_segment.cc
            tensorflow/core/graph/edgeset.cc
            tensorflow/core/graph/graph_constructor.cc
            tensorflow/core/platform/env.cc
            tensorflow/core/platform/cpu_feature_guard.cc
            tensorflow/core/platform/cpu_info.cc
            tensorflow/core/platform/posix/env.cc
            tensorflow/core/platform/posix/load_library.cc
            tensorflow/core/platform/protobuf_util.cc
            tensorflow/core/framework/load_library.cc
            tensorflow/core/framework/op.cc
            tensorflow/core/framework/tensor_slice.pb.cc
            tensorflow/core/framework/function.cc
            tensorflow/core/protobuf/queue_runner.pb_text.cc
            tensorflow/core/lib/core/status.cc
            tensorflow/core/lib/io/path.cc
            tensorflow/core/util/equal_graph_def.cc
            tensorflow/core/lib/hash/hash.cc
            tensorflow/core/lib/core/arena.cc
            tensorflow/core/lib/strings/scanner.cc
            tensorflow/core/framework/node_def_util.cc
            tensorflow/core/framework/attr_value_util.cc
            tensorflow/core/framework/op_def_util.cc
            tensorflow/core/framework/node_def_builder.cc
            tensorflow/core/framework/shape_inference.cc
            tensorflow/core/framework/variant.cc
            tensorflow/core/common_runtime/graph_runner.cc
            tensorflow/core/framework/common_shape_fns.cc
            tensorflow/core/framework/versions.cc
            tensorflow/core/graph/algorithm.cc
            tensorflow/core/graph/tensor_id.cc
            tensorflow/core/platform/env_time.cc
            tensorflow/core/platform/posix/env_time.cc
            tensorflow/core/platform/file_system.cc
            tensorflow/core/platform/posix/posix_file_system.cc
            tensorflow/core/framework/op_def_builder.cc
            tensorflow/core/lib/strings/proto_text_util.cc
            tensorflow/core/framework/rendezvous.cc
            tensorflow/core/common_runtime/executor.cc
            tensorflow/core/framework/tensor_util.cc
            tensorflow/core/lib/strings/strcat.cc
            tensorflow/core/lib/strings/stringprintf.cc
            tensorflow/core/framework/attr_value.pb.cc
            tensorflow/core/framework/tensor_shape.pb.cc
            tensorflow/core/framework/op_def.pb.cc
            tensorflow/core/framework/tensor.pb.cc
            tensorflow/core/framework/types.pb.cc
            tensorflow/core/framework/resource_handle.pb.cc
            tensorflow/core/framework/tensor_description.pb.cc
            tensorflow/core/framework/allocation_description.pb.cc
            tensorflow/core/framework/log_memory.pb.cc
            tensorflow/core/framework/graph.pb.cc
            tensorflow/core/protobuf/config.pb.cc
            tensorflow/core/util/tensor_format.cc
            tensorflow/core/lib/core/threadpool.cc
            tensorflow/core/platform/posix/error.cc
            tensorflow/core/framework/unique_tensor_references.cc
            tensorflow/core/framework/kernel_def.pb.cc
            tensorflow/core/util/memmapped_file_system.pb_text.cc
            tensorflow/core/util/device_name_utils.cc
            tensorflow/core/protobuf/cluster.pb.cc
            tensorflow/core/framework/step_stats.pb.cc
            tensorflow/core/framework/cost_graph.pb.cc
            tensorflow/core/framework/node_def.pb.cc
            tensorflow/core/framework/function.pb.cc
            tensorflow/core/framework/versions.pb.cc
            tensorflow/core/protobuf/queue_runner.pb.cc
            tensorflow/core/lib/core/error_codes.pb_text.cc
            tensorflow/core/framework/types.pb_text.cc
            tensorflow/core/protobuf/device_properties.pb_text.cc
            tensorflow/core/protobuf/tensor_bundle.pb_text.cc
            tensorflow/core/protobuf/saver.pb_text.cc
            tensorflow/core/protobuf/config.pb_text.cc
            tensorflow/core/protobuf/debug.pb_text.cc
            tensorflow/core/protobuf/rewriter_config.pb_text.cc
            tensorflow/core/protobuf/cluster.pb_text.cc
            tensorflow/core/platform/posix/port.cc
            tensorflow/core/lib/strings/numbers.cc
            tensorflow/core/lib/random/random.cc
            tensorflow/core/util/padding.cc
            tensorflow/core/util/saved_tensor_slice.pb_text.cc
            tensorflow/core/util/tensor_slice_reader_cache.cc
            tensorflow/core/framework/cancellation.cc
            tensorflow/core/protobuf/debug.pb.cc
            tensorflow/core/framework/graph_transfer_info.pb.cc
            tensorflow/core/protobuf/rewriter_config.pb.cc
            tensorflow/core/framework/node_def.pb_text.cc
            tensorflow/core/util/env_var.cc
            tensorflow/core/common_runtime/device_set.cc
            tensorflow/core/common_runtime/device_mgr.cc
            tensorflow/core/common_runtime/simple_graph_execution_state.cc
            tensorflow/core/common_runtime/debugger_state_interface.cc
            tensorflow/core/common_runtime/rendezvous_mgr.cc
            tensorflow/core/common_runtime/session_state.cc
            tensorflow/core/common_runtime/graph_optimizer.cc
            tensorflow/core/common_runtime/device_factory.cc
            tensorflow/core/common_runtime/direct_session.cc
            tensorflow/core/util/tensor_slice_reader.cc
            tensorflow/core/util/saved_tensor_slice.pb.cc
            tensorflow/core/util/stat_summarizer.cc
            tensorflow/core/framework/cost_graph.pb_text.cc
            tensorflow/core/lib/core/error_codes.pb.cc
            tensorflow/core/framework/kernel_def.pb_text.cc
            tensorflow/core/protobuf/saver.pb.cc
            tensorflow/core/framework/graph.pb_text.cc
            tensorflow/core/framework/memory_types.cc
            tensorflow/core/common_runtime/step_stats_collector.cc
            tensorflow/core/platform/denormal.cc
            tensorflow/core/platform/setround.cc
            tensorflow/core/framework/tensor_reference.cc
            tensorflow/core/util/memmapped_file_system.pb.cc
            tensorflow/core/framework/device_attributes.pb_text.cc
            tensorflow/core/util/saved_tensor_slice_util.cc
            tensorflow/core/framework/tensor_slice.cc
            tensorflow/core/util/tensor_slice_set.cc
            tensorflow/core/framework/op_def.pb_text.cc
            tensorflow/core/lib/strings/ordered_code.cc
            tensorflow/core/framework/device_attributes.pb.cc
            tensorflow/core/graph/costmodel.cc
            tensorflow/core/common_runtime/costmodel_manager.cc
            tensorflow/core/framework/graph_transfer_info.pb_text.cc
            tensorflow/core/framework/tensor_description.pb_text.cc
            tensorflow/core/framework/function.pb_text.cc
            tensorflow/core/framework/step_stats.pb_text.cc
            tensorflow/core/framework/versions.pb_text.cc
            tensorflow/core/protobuf/device_properties.pb.cc
            tensorflow/core/protobuf/tensor_bundle.pb.cc
            tensorflow/core/framework/resource_handle.pb_text.cc
            tensorflow/core/framework/tensor.pb_text.cc
            tensorflow/core/framework/reader_base.pb_text.cc
            tensorflow/core/framework/variable.pb_text.cc
            tensorflow/core/lib/io/table.cc
            tensorflow/core/framework/reader_base.pb.cc
            tensorflow/core/framework/log_memory.pb_text.cc
            tensorflow/core/lib/io/block.cc
            tensorflow/core/lib/io/format.cc
            tensorflow/core/framework/variable.pb.cc
            tensorflow/core/framework/allocation_description.pb_text.cc
            tensorflow/core/framework/tensor_slice.pb_text.cc
            tensorflow/core/lib/hash/crc32c.cc
            tensorflow/core/lib/io/iterator.cc
            tensorflow/core/lib/io/two_level_iterator.cc
            tensorflow/core/lib/hash/crc32c_accelerate.cc
            tensorflow/core/framework/summary.pb_text.cc
            tensorflow/core/framework/attr_value.pb_text.cc
            tensorflow/core/framework/remote_fused_graph_execute_info.pb_text.cc
            tensorflow/core/framework/summary.pb.cc
            tensorflow/core/framework/tensor_shape.pb_text.cc
            tensorflow/core/framework/remote_fused_graph_execute_info.pb.cc
            tensorflow/core/util/mirror_pad_mode.cc
            tensorflow/core/ops/function_ops.cc
            tensorflow/core/common_runtime/copy_tensor.cc
            tensorflow/core/graph/gradients.cc
            tensorflow/core/graph/graph_def_builder.cc
            tensorflow/core/graph/control_flow.cc
            tensorflow/core/framework/graph_def_util.cc
            tensorflow/core/common_runtime/simple_placer.cc
            tensorflow/core/graph/validate.cc
            tensorflow/core/common_runtime/function.cc
            tensorflow/core/common_runtime/constant_folding.cc
            tensorflow/core/graph/optimizer_cse.cc
            tensorflow/core/common_runtime/memory_types.cc
            tensorflow/core/graph/graph_partition.cc
            tensorflow/core/common_runtime/optimization_registry.cc
            tensorflow/core/util/strided_slice_op.cc
            tensorflow/contrib/ffmpeg/default/ffmpeg_lib.cc
            tensorflow/contrib/boosted_trees/ops/split_handler_ops.cc
            tensorflow/contrib/boosted_trees/ops/model_ops.cc
            tensorflow/contrib/boosted_trees/ops/ensemble_optimizer_ops.cc
            tensorflow/contrib/boosted_trees/ops/quantile_ops.cc
            tensorflow/contrib/boosted_trees/ops/stats_accumulator_ops.cc
            tensorflow/contrib/resampler/ops/resampler_ops.cc
            tensorflow/contrib/cudnn_rnn/ops/cudnn_rnn_ops.cc
            tensorflow/contrib/text/ops/skip_gram_ops.cc
            tensorflow/contrib/nccl/ops/nccl_ops.cc
            tensorflow/contrib/input_pipeline/ops/input_pipeline_ops.cc
            tensorflow/contrib/factorization/ops/factorization_ops.cc
            tensorflow/contrib/factorization/ops/clustering_ops.cc
            tensorflow/contrib/memory_stats/ops/memory_stats_ops.cc
            tensorflow/contrib/batching/ops/batch_ops.cc
            tensorflow/contrib/image/ops/image_ops.cc
            tensorflow/contrib/image/ops/single_image_random_dot_stereograms_ops.cc
            tensorflow/contrib/layers/ops/sparse_feature_cross_op.cc
            tensorflow/contrib/cloud/ops/bigquery_reader_ops.cc
            tensorflow/contrib/fused_conv/ops/fused_conv2d_bias_activation_op.cc
            tensorflow/contrib/rnn/ops/gru_ops.cc
            tensorflow/contrib/rnn/ops/lstm_ops.cc
            tensorflow/contrib/seq2seq/ops/beam_search_ops.cc
            tensorflow/contrib/framework/ops/checkpoint_ops.cc
            tensorflow/contrib/framework/ops/variable_ops.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/stochastic_hard_routing_function_op.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/stochastic_hard_routing_gradient_op.cc
            tensorflow/contrib/tensor_forest/ops/tensor_forest_ops.cc
            tensorflow/contrib/tensor_forest/ops/stats_ops.cc
            tensorflow/contrib/tensor_forest/ops/model_ops.cc
            tensorflow/contrib/tpu/ops/tpu_sendrecv_ops.cc
            tensorflow/contrib/tpu/ops/replication_ops.cc
            tensorflow/contrib/tpu/ops/infeed_ops.cc
            tensorflow/contrib/tpu/ops/cross_replica_ops.cc
            tensorflow/contrib/tpu/ops/outfeed_ops.cc
            tensorflow/contrib/tpu/ops/tpu_configuration_ops.cc
            tensorflow/contrib/tensor_forest/hybrid/core/ops/utils.cc
            tensorflow/compiler/tf2xla/ops/functional_ops.cc
            tensorflow/core/ops/nn_ops.cc
            tensorflow/core/ops/math_grad.cc
            tensorflow/core/ops/io_ops.cc
            tensorflow/core/ops/sendrecv_ops.cc
            tensorflow/core/ops/logging_ops.cc
            tensorflow/core/ops/data_flow_ops.cc
            tensorflow/core/ops/image_ops.cc
            tensorflow/core/ops/no_op.cc
            tensorflow/core/ops/math_ops.cc
            tensorflow/core/kernels/remote_fused_graph_execute_utils.cc
            tensorflow/core/ops/debug_ops.cc
            tensorflow/core/ops/word2vec_ops.cc
            tensorflow/core/ops/lookup_ops.cc
            tensorflow/core/ops/stateless_random_ops.cc
            tensorflow/core/ops/string_ops.cc
            tensorflow/core/ops/control_flow_ops.cc
            tensorflow/core/ops/spectral_ops.cc
            tensorflow/core/ops/set_ops.cc
            tensorflow/core/ops/bitwise_ops.cc
            tensorflow/core/ops/ctc_ops.cc
            tensorflow/core/ops/candidate_sampling_ops.cc
            tensorflow/core/ops/linalg_ops.cc
            tensorflow/core/ops/array_grad.cc
            tensorflow/core/ops/training_ops.cc
            tensorflow/core/ops/script_ops.cc
            tensorflow/core/ops/dataset_ops.cc
            tensorflow/core/ops/resource_variable_ops.cc
            tensorflow/core/ops/audio_ops.cc
            tensorflow/core/ops/sdca_ops.cc
            tensorflow/core/ops/random_grad.cc
            tensorflow/core/ops/sparse_ops.cc
            tensorflow/core/ops/functional_grad.cc
            tensorflow/core/ops/state_ops.cc
            tensorflow/core/ops/functional_ops.cc
            tensorflow/core/ops/array_ops.cc
            tensorflow/core/ops/nn_grad.cc
            tensorflow/core/ops/random_ops.cc
            tensorflow/core/framework/kernel_def_builder.cc
            tensorflow/core/ops/remote_fused_graph_ops.cc
            tensorflow/core/common_runtime/parallel_concat_optimizer.cc
            tensorflow/c/c_api.cc
            third_party/fft2d/fftsg.c
            third_party/protobuf/google/protobuf/message.cc
            third_party/protobuf/google/protobuf/stubs/once.cc
            third_party/protobuf/google/protobuf/generated_message_util.cc
            third_party/protobuf/google/protobuf/wire_format_lite.cc
            third_party/protobuf/google/protobuf/stubs/common.cc
            third_party/protobuf/google/protobuf/arena.cc
            third_party/protobuf/google/protobuf/io/coded_stream.cc
            third_party/protobuf/google/protobuf/map_field.cc
            third_party/protobuf/google/protobuf/descriptor.cc
            third_party/protobuf/google/protobuf/descriptor.pb.cc
            third_party/protobuf/google/protobuf/generated_message_reflection.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream_impl.cc
            third_party/protobuf/google/protobuf/stubs/strutil.cc
            third_party/protobuf/google/protobuf/message_lite.cc
            third_party/protobuf/google/protobuf/reflection_ops.cc
            third_party/protobuf/google/protobuf/unknown_field_set.cc
            third_party/protobuf/google/protobuf/wire_format.cc
            third_party/protobuf/google/protobuf/stubs/structurally_valid.cc
            third_party/protobuf/google/protobuf/stubs/status.cc
            third_party/protobuf/google/protobuf/descriptor_database.cc
            third_party/protobuf/google/protobuf/stubs/int128.cc
            third_party/protobuf/google/protobuf/stubs/stringprintf.cc
            third_party/protobuf/google/protobuf/stubs/substitute.cc
            third_party/protobuf/google/protobuf/io/strtod.cc
            third_party/protobuf/google/protobuf/dynamic_message.cc
            third_party/protobuf/google/protobuf/io/tokenizer.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream_impl_lite.cc
            third_party/protobuf/google/protobuf/text_format.cc
            third_party/protobuf/google/protobuf/stubs/stringpiece.cc
            third_party/protobuf/google/protobuf/extension_set.cc
            third_party/protobuf/google/protobuf/extension_set_heavy.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream.cc
            third_party/protobuf/google/protobuf/repeated_field.cc
            third_party/protobuf/google/protobuf/any.cc
            )

target_include_directories(tensorflow_inference PRIVATE
                           ${CMAKE_SOURCE_DIR}/
                           ${CMAKE_SOURCE_DIR}/third_party/eigen3
                           ${CMAKE_SOURCE_DIR}/third_party/protobuf
                           )

target_link_libraries(tensorflow_inference
                      android
                      log
                      jnigraphics
                      m
                      atomic
                      z)

#########################################################
MESSAGE(STATUS "Project: tensorflow_demo")

get_filename_component(SAMPLE_SRC_DIR  ${CMAKE_SOURCE_DIR}  ABSOLUTE)
file(GLOB_RECURSE tensorflow_demo_sources ${SAMPLE_SRC_DIR}/demo/*.*)
add_library(tensorflow_demo SHARED
            ${tensorflow_demo_sources})
target_include_directories(tensorflow_demo PRIVATE
                           ${CMAKE_SOURCE_DIR}/demo/)

target_link_libraries(tensorflow_demo
                      android
                      log
                      jnigraphics
                      m
                      atomic
                      z)
